# query-optimizer

./: .env  .gitignore  README.md  pyproject.toml
database_tool/: logger.py  main.py
templates/: ddl_report.html  index.html
